--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 :root {
@@ -19,8 +19,8 @@
 }
 
 html {
-    font-size: 62.5%;
-    overflow: hidden;
+    font-size: 62%;
+    overflow-x: hidden;
 }
 
 body {
@@ -29,20 +29,12 @@ body {
     color: var(--text-color)
 }
 
-html::-webkit-scrollbar-track {
-    background: var(--bg-color);
-}
-
-html::-webkit-scrollbar-thumb {
-    background: var(--main-color);
-}
-
 .header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 3rem 9%;
+    padding: 3rem 9% 4rem;
     background: rgba(0, 0, 0, 0.7);
     filter: drop-shadow(10px);
     display: flex;
@@ -64,6 +56,10 @@ html::-webkit-scrollbar-thumb {
     transform: scale(1.1);
 }
 
+.logo span {
+    text-shadow: 0 0 25px var(--main-color);
+}
+
 .navbar a {
     font-size: 1.8rem;
     color: var(--text-color);
@@ -75,7 +71,7 @@ html::-webkit-scrollbar-thumb {
 
 .navbar a:hover,
 .navbar a.active {
-    columns: var(--main-color);
+    color: var(--main-color);
     border-bottom: 3px solid var(--main-color);
 }
 
@@ -85,132 +81,102 @@ html::-webkit-scrollbar-thumb {
     display: none;
 }
 
-@media (max-width:995px) {
-    #menu-icon {
-        display: block;
-    }
-
-    .navbar {
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 40%;
-        border-left: 3px solid var(--main-color);
-        border-bottom: 3px solid var(--main-color);
-        border-bottom-left-radius: 2rem;
-        padding: 1rem 3%;
-        background-color: var(--second-bg-color);
-        border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
-        display: none;
-    }
-
-    .navbar.active {
-        display: block;
-    }
-
-    .navbar .a {
-        display: block;
-        font-size: 2rem;
-        margin: 3rem 0;
-    }
-
-    .navbar a:hover,
-    .navbar a.active{
-        padding: 1rem;
-        border-radius: 0.5rem;
-        border-bottom: 0.5rem solid var(--main-color);
-    }
-}
-
-section {
+section{
     min-height: 100vh;
-    padding: 5rem 9% 5rem;
+    padding: 10rem 12% 10rem;
 }
 
-.home {
+.home{
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 8rem;
-    background: var(--bg-color);
+    justify-content: center;
+    gap: 15rem;
 }
 
-.home .home-content h1{
-    font-size: 6rem;
-    font-weight: 700;
-    line-height: 1.3;
+.home-content{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    text-align: left;
+    justify-content: center;
+    margin-top: 3rem;
+
 }
 
-span {
+span{
+    color: var(--main-color);
+}
+.logo span{
     color: var(--main-color);
 }
 
-.home-content h3 {
-    font-size: 4rem;
-    margin-bottom: 1rem;
-    font-weight: 700;
+.home-content h3{
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 3.5rem;
 }
 
-.home-img {
+.home-content h1 {
+    font-size: 7rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    line-height: 1;
+}
+
+.home-img{
     border-radius: 50%;
 }
 
 .home-img img {
     position: relative;
-    width: 320px;
+    top: 3rem;
+    width: 32vw;
     border-radius: 50%;
     box-shadow: 0 0 25px var(--main-color);
     cursor: pointer;
+    transition: 0.4s ease-in-out;
 }
 
-.home-img img:hover{
-    transform: scale(1.01);
-    filter: drop-shadow(0 0 25px var(--main-color));
-}
-
-.home-content p{
-    font-size: 1.8rem;
+.home-content p {
+    font-size: 1.5rem;
     font-weight: 500;
+    line-height: 1.8;
+    max-width: 1000px;
 }
 
-.social-icon a {
+.social-icon a{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 4rem;
-    height: 4rem;
+    width: 4.5rem;
+    height: 4.5rem;
     background: transparent;
-    border: 0.2rem solid var(--main-color);
-    font-size: 2rem;
+    border: 2px solid var(--main-color);
+    font-size: 2.5rem;
     border-radius: 50%;
     color: var(--main-color);
     margin: 3rem 1.5rem 3rem 0;
-    transition: 0.3s ease;
+    transition: 0.3s ease-in-out;
 }
 
 .social-icon a:hover{
-    color: white;
+    color: var(--text-color);
     transform: scale(1.3)translateY(-5px);
-    background: var(--main-color);
-    box-shadow: 0 0 25px var(--main-color);
+    box-shadow:  0 0 25px var(--main-color);
+    background-color: var(--main-color);
 }
 
-.btn {
+.btn{
     display: inline-block;
     padding: 1rem 2.8rem;
-    background: var(--bg-color);
+    background:  var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
     border-radius: 4rem;
     font-size: 1.6rem;
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
+    color: black;
+    border: 2px solid transparent;
     letter-spacing: 0.1rem;
     font-weight: 600;
-    transition: 0.3s ease;
+    transition: 0.3s ease-in-out;
     cursor: pointer;
-}
-.btn:hover {
-    transform: scale(1.03);
-    background-color: var(--main-color);
-    color: var(--text-color);
-    box-shadow: 0 0 25px var(--main-color);
 }
